--- a/crm/templates/crm/pages/system_settings/users/user_create.html
+++ b/crm/templates/crm/pages/system_settings/users/user_create.html
@@ -43,21 +43,25 @@
                 <div class="col-xl-6 col-md-6" style="padding: 0 10px">
                     <p style="margin: 0; font-weight: 600; font-size: 15px">{{ form.password1.label }}</p>
                     <div>
-                        <input type="password" name="password1" class="form-control" required="" id="id_password1" style="max-width: 600px; display: inline-block; margin-right: -6px">
-                        <div style="display: inline-block">
-                            <button style="margin-right: -6px; height: 38px; margin-top: -3px" class="btn btn-default generatePassword" type="button">
-                                Сгенерировать
-                            </button>
-                            <button style="height: 38px; margin-top: -3px" type="button" class="btn btn-primary showPassword">
-                                <i class="fa fa-eye" aria-hidden="true"></i>
-                            </button>
+                        <div class="input-group">
+                            {{ form.password1 }}
+                            <div class="input-group-append">
+                                <button class="btn btn-default generatePassword" type="button">
+                                    Сгенерировать
+                                </button>
+                            </div>
+                            <div class="input-group-append">
+                                <button type="button" class="btn btn-primary showPassword">
+                                    <i class="fa fa-eye" aria-hidden="true"></i>
+                                </button>
+                            </div>
                         </div>
-                        {% if form.errors %}
-                            <p style="font-size: 14px; padding: 0; margin: 0">* Пароль должен содержать как минимум 8 символов.</p>
-                            <p style="font-size: 14px; padding: 0; margin: 0">* Пароли должны совпадать.</p>
-                            <p style="font-size: 14px; padding: 0; margin: 0">* Пароль должен сожержать цифры, буквы, верхний регистр.</p>
-                        {% endif %}
                     </div>
+                    {% if form.errors %}
+                        <p style="font-size: 14px; padding: 0; margin: 0">* Пароль должен содержать как минимум 8 символов.</p>
+                        <p style="font-size: 14px; padding: 0; margin: 0">* Пароли должны совпадать.</p>
+                        <p style="font-size: 14px; padding: 0; margin: 0">* Пароль должен сожержать цифры, буквы, верхний регистр.</p>
+                    {% endif %}
                 </div>
             </div>
             <div class="row" style="margin: 8px">
