--- a/crm/templates/crm/pages/system_settings/tariffs/tariff_update.html
+++ b/crm/templates/crm/pages/system_settings/tariffs/tariff_update.html
@@ -27,10 +27,10 @@
 {% block tariffs-active %}class="black"{% endblock %}
 
 
-{% block title %}Новый тариф{% endblock %}
-{% block name_page %}Новый тариф{% endblock %}
-{% block previos_link %}<a href="{% url 'tariffs_list' %}" style="color: #494949">/ Тарифы</a>{% endblock %}
-{% block nav %}Новый тариф{% endblock %}
+{% block title %}Тариф: {{ tariff.name }}{% endblock %}
+{% block name_page %}Тариф: {{ tariff.name }}{% endblock %}
+{% block previos_link %}<a href="{% url 'tariffs_list' %}" style="color: #494949">/ Тарифы </a><a href="{% url 'tariff_detail' pk=tariff.id %}" style="color: #494949"> / Тариф: {{ tariff.name }} </a>{% endblock %}
+{% block nav %}Редактирование{% endblock %}
 
 {% block content %}
     <div class="my-box" style="min-height: 0">
@@ -50,7 +50,43 @@
 
                 <!-- Formset -->
                 {{ formset.management_form }}
-                <div id="formset"></div>
+                <div id="formset">
+                    {% for form in formset %}
+                        <div id="{{ form.prefix }}-form" style="padding: 7px">
+                            {{ form.id }}
+                            <div class="row">
+                                <div class="col-xl-3">
+                                    <span style="font-weight: bold">{{ form.service.label }}</span>
+                                    {{ form.service }}
+                                </div>
+                                <div class="col-xl-2">
+                                    <span style="font-weight: bold">{{ form.cost_for_unit.label }}</span>
+                                    {{ form.cost_for_unit }}
+                                </div>
+                                <div class="col-xl-2">
+                                    <span style="font-weight: bold">Валюта</span>
+                                    <div>
+                                        <input id="{{ form.prefix }}-currency" type="text" value="грн" class="form-control" disabled>
+                                    </div>
+                                </div>
+                                <div class="col-xl-2">
+                                    <span style="font-weight: bold">Ед. изм.</span>
+                                    <div class="input-group">
+                                        {{ form.units }}
+                                        <div class="input-group-append">
+                                            <button onclick="delete_service(this.id)" id="{{ form.prefix }}" type="button" class="btn btn-default"><i class="fa fa-trash"></i></button>
+                                        </div>
+                                        {% if formset.errors %}
+                                            {% for error in formset.errors %}
+                                                <p style="font-size: 14px; color: red; margin: 0">* {{ error }}</p>
+                                            {% endfor %}
+                                        {% endif %}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
 
                 <div>
                     <button id="add-service" type="button" class="btn btn-default" style="margin: 7px">Добавить</button>
