--- a/main/templates/main/layout/base.html
+++ b/main/templates/main/layout/base.html
@@ -25,7 +25,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="height: 50px">
         <div class="container" style="max-width: 1140px">
-            <a href="{% url 'main' %}"><img src="{% static 'crm/dist/img/logo.svg' %}" width="145" height="40"></a>
+            <a href="{% url 'main_page' %}"><img src="{% static 'crm/dist/img/logo.svg' %}" width="145" height="40"></a>
             <div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
