--- a/users/templates/users/pages/login/owner_login.html
+++ b/users/templates/users/pages/login/owner_login.html
@@ -22,7 +22,7 @@
 <body class="login-page" style="min-height: 496.781px; margin-top: -70px">
     <div class="login-box">
         <div class="login-logo">
-            <a href="{% url 'main' %}">
+            <a href="{% url 'main_page' %}">
                 <img src="{% static 'crm/dist/img/logo.svg' %}" width="360" alt="logo">
             </a>
         </div>
